[tool.poetry]
name = "gfthings"
version = "0.3.0"
description = "Paul's Gridfinity Things"
authors = ["Paul Bone <paul@bone.id.au>"]
license = "CC BY-NC-SA 4.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
packages = [{include = "gfthings"}]

[project.urls]
Homepage = "https://github.com/PaulBone/gfthings"

[tool.poetry.scripts]
gfpin = "gfthings.gfpin:main"
gfbin = "gfthings.gfbin:main"
gfbase = "gfthings.gfbase:main"
gfedge = "gfthings.gfedge:main"

[tool.poetry.dependencies]
python = "^3.10"
build123d = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
