[tool.poetry]
name = "gfthings"
version = "0.7.2"
description = "Paul's Gridfinity Things"
authors = ["Paul Bone <paul@bone.id.au>"]
license = "CC BY-NC-SA 4.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
packages = [{include = "gfthings"}]

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"

[project.urls]
Homepage = "https://github.com/PaulBone/gfthings"

[tool.poetry.scripts]
gfpin = "gfthings.gfpin:main"
gfbin = "gfthings.gfbin:main"
gfbase = "gfthings.gfbase:main"
gfedge = "gfthings.gfedge:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
build123d = "^0.9.1"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
